--- a/threejs-boilerplate/index.html
+++ b/threejs-boilerplate/index.html
@@ -6,6 +6,7 @@
     <title>Three.js Boilerplate</title>
   </head>
   <body>
+    <canvas id="canvas"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
